# IoT-Test

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
docs/: detection_logic.md
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
main/config/: config.hpp
main/hardware/laser/: vl53lxx-v2.cpp  vl53lxx-v2.hpp
main/hardware/led/: led.cpp  led.hpp
main/hardware/ultrasonic/: hcsr04.cpp  hcsr04.hpp
main/processor/: processor.cpp  processor.hpp
main/processor/distance/: distance_processor.cpp  distance_processor.hpp
main/telemetry/: telemetry.cpp  telemetry.hpp
main/telemetry/distance/: distance_telemetry.cpp  distance_telemetry.hpp
main/telemetry/publisher/: mqtt.cpp  mqtt.hpp  publisher.cpp  publisher.hpp
